--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
                         <div data-i18n="githubStat2"></div>
                     </div>
                     <div class="stat">
-                        <div class="stat-value">Vue.js Rust</div>
+                        <div class="stat-value">Vue.js Python</div>
                         <div data-i18n="githubStat3"></div>
                     </div>
                     <div class="stat">
